fixed issue with bullet points not showing in readme

--- a/src/main.css
+++ b/src/main.css
@@ -251,6 +251,9 @@ code {
 li {
   list-style-type: none;
 }
+projects-modal-body li {
+  list-style-type: circle;
+}
 
 .skills-list-item-card {
   background-color: #253546;
